# sda-analysis

./: .gitignore  README.md  main.ipynb  pyproject.toml  sda_comparison.ipynb
src/: evaluation.py  experiment.py  plotting.py  utils.py  vectorization.py
src/attack/: __init__.py  attack.py  runner.py
src/attack/advanced/: regression.py  torch_attack.py
src/attack/advanced/torch_modules/: transformer.py
src/attack/disclosure/: disclosure.py  hitting_set.py  sda.py
src/dataset/: chating.py  dataset.py  simulation.py
