[project]
name = "sda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy<2",
    "pandas>=2.3.2",
    "rbo>=0.1.3",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch<2.3",
    "tqdm>=4.67.1",
]


[tool.uv]
dev-dependencies = [
    "ipykernel>=6.30.1",
]
