[project]
name = "sda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=1.26.4",
    "pandas>=2.3.2",
    "rbo>=0.1.3",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]


# Optional groups
[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
